--- a/packages/stateofjs/lib/i18n/common/yml/it-IT.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/it-IT.yml
@@ -491,18 +491,9 @@ translations:
   - key: user_info.gender
     t: Sesso
 
-
   # skin tone/appearance
-  - key: user_info.skin_tone
-    t: Aspetto
-  - key: user_info.skin_tone.description
-    t: >
-        Quale emoji ti rappresenta al meglio? <br/><br/>
-
-        Nota: Stiamo sperimentando un nuovo formato di domande che ci permetterà
-        di avere una migliore rappresentazione demografica dei partecipanti al sondaggio. 
-        <a href="https://github.com/StateOfJS/StateOfCSS-2020/issues/5" target="_blank">Lasciaci un feedback</a>
-        su GitHub. 
+  - key: user_info.race_ethnicity
+    t: Race & Ethnicity # TODO
 
   # other info
   - key: user_info.how_did_user_find_out_about_the_survey
