--- a/packages/stateofjs/lib/i18n/state-of-css/yml/es-ES.yml
+++ b/packages/stateofjs/lib/i18n/state-of-css/yml/es-ES.yml
@@ -10,10 +10,10 @@ translations:
     t: >
       CSS está evolucionando más deprisa que nunca.
 
-      
+
       Flexbox, Grid, Multi-Column… por no hablar del totalmente nuevo paradigma CSS-in-JS.
 
-      
+
       Así que después del éxito de nuestra encuesta anual sobre el Estado de JavaScrip,
       hemos decidido hacer una dentro del mundo de los estilos y los selectores para ayudar
       a identificar las últimas tendencias… y tratar de reducir la creciente "gran brecha del front"!
@@ -26,7 +26,7 @@ translations:
     t: Diseño
   - key: sections.layout.description
     t: Cómo distribuyes los elementos por la pantalla?
-  
+
   - key: sections.shapes_graphics.title
     t: Formas y Gráficos
   - key: sections.shapes_graphics.description
@@ -50,7 +50,7 @@ translations:
   - key: sections.media_queries.title
     t: Media Queries
   - key: sections.media_queries.description
-    t: Formas de adaptar to página a los dispositivos de tus usuarios o sus preferencias.
+    t: Formas de adaptar tu página a los dispositivos de tus usuarios o sus preferencias.
 
   - key: sections.other_features.title
     t: Otras Características
@@ -207,7 +207,7 @@ translations:
     t: Animaciones
   - key: features.perspective
     t: <code>perspective</code>
-  
+
   # media queries
   - key: features.feature_support_queries
     t: Comprobando Características Soportadas (<code>@supports</code>)
@@ -342,7 +342,7 @@ translations:
 
   - key: features.attributes
     t: Atributos
-  
+
   - key: options.attributes.presence
     t: div[foo] (Presencia)
   - key: options.attributes.equality
@@ -370,7 +370,7 @@ translations:
 
   - key: features.interaction
     t: Interacciones
-  
+
   - key: options.interaction.hover
     t: :hover
   - key: options.interaction.active
@@ -421,7 +421,7 @@ translations:
     t: Navegadores
   - key: environments.browsers.description
     t: ¿En qué navegadores haces pruebas?
-  
+
   - key: environments.form_factors
     t: Factor de Forma
   - key: environments.form_factors.description
@@ -443,22 +443,22 @@ translations:
 
   - key: opinions.css_easy_to_learn
     t: CSS es fácil de aprender
-    
+
   - key: opinions.css_evolving_slowly
     t: CSS está evolucionando muy despacio
-    
+
   - key: opinions.utility_classes_to_be_avoided
     t: Clases funcionales (no-semánticas) (.center, .large-text, etc.) deberían ser evitadas
-    
+
   - key: opinions.selector_nesting_to_be_avoided
     t: Anidar selectores (.foo .bar ul li {...}) debería evitarse
-    
+
   - key: opinions.css_is_programming_language
     t: CSS es un lenguaje de programación
-    
+
   - key: opinions.enjoy_writing_css
     t: Disfruto escribiendo CSS
-    
+
   - key: opinions.currently_missing_from_css.others
     t: ¿Qué crees que le falta a CSS?
   - key: opinions.currently_missing_from_css.others.description
@@ -468,9 +468,9 @@ translations:
     t: CSS en una palabra
   - key: opinions.sum_up_one_word_css.description
     t: ¿Cómo resumirías tu opinión de CSS en una palabra?
-    
+
   - key: happiness.state_of_the_web
     t: ¿Cómo de contento estás con el estado general de las tecnologías web?
-  
+
   - key: happiness.state_of_css
     t: ¿Cómo de contento estás con el estado general de CSS?
